# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bridge_forge"
version = "0.1.0"
description = "Bridge Forge environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "anastruct>=1.5.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m bridge_forge.server.app
server = "bridge_forge.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["bridge_forge", "bridge_forge.server"]
package-dir = { "bridge_forge" = ".", "bridge_forge.server" = "server" }